# envoy_wasm_demo

./: README.md
envoy/: cds.yaml  docker-compose.yaml  envoy.yaml  lds.yaml
grpc_call/: Cargo.toml  build.rs
grpc_call/src/: lib.rs
grpc_call/src/pb/: hello.rs
grpc_server/: Cargo.toml  build.rs
grpc_server/protos/: hello.proto
grpc_server/src/: main.rs  server.rs
grpc_server/src/pb/: hello.rs
