[package]
name = "grpc_call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.20"
protobuf = "2.27.1"
proxy-wasm = "0.2.1"
serde = {version="1.0.196",features=["derive"]}
serde_json = "1.0.113"

[build-dependencies]
protoc-rust = "2.28.0"
